--- a/css/style.css
+++ b/css/style.css
@@ -286,3 +286,186 @@ ul {
   margin-bottom: 25px;
 }
 /* offer area end  */
+/* holiday area start */
+.holiday-text * {
+  text-align: center;
+}
+.holiday-text {
+  margin-bottom: 200px;
+}
+.holiday-text p.heading {
+  color: #070211;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.holiday-text h2 span {
+  color: #f00;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  margin-bottom: 15px;
+}
+.holiday-text h2 {
+  color: #070211;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  margin-bottom: 15px;
+}
+.holiday-text p {
+  color: rgba(7, 2, 17, 0.6);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 160% */
+  margin-bottom: 15px;
+}
+.holiday-images {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.holiday-images img {
+  width: 100%;
+}
+.holiday-section-one {
+  background-image: url("../images/Rectangle\ 2.png");
+  width: 100%;
+  height: 537px;
+  margin-top: 100px;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  position: relative;
+  background-repeat: no-repeat;
+}
+.holiday-section-one::before {
+  position: absolute;
+  content: "";
+  background-image: url("../images/box.png");
+  background-repeat: no-repeat;
+  /* top: -121px; */
+  left: 0;
+  bottom: -100px;
+  width: 61%;
+  height: 121%;
+}
+.holiday-section-one::after {
+  position: absolute;
+  content: "";
+  background-image: url(../images/discount.png);
+  background-repeat: no-repeat;
+  top: 50px;
+  right: 285px;
+  /* bottom: 70px; */
+  width: 300px;
+  height: 300px;
+  /* left: 526px; */
+}
+/* .holiday-section-two {
+  background-image: url("../images/Rectangle\ 2.png");
+  width: 100%;
+  height: 537px;
+  margin-top: 100px;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  position: relative;
+  background-repeat: no-repeat;
+} */
+.holiday-section-one img {
+  float: right;
+}
+/* .holiday-images .holiday-left {
+  position: absolute;
+  top: 100%;
+  bottom: 0;
+} */
+/* holiday area end */
+/* portfolio area start */
+.portfolio-area {
+  margin: 150px 0 130px 0;
+}
+.portfolio-content span {
+  color: #f00;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  display: block;
+  margin-bottom: 15px;
+}
+.portfolio-content h2 {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: capitalize;
+  margin-bottom: 15px;
+}
+.portfolio-content p {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 160% */
+  margin-bottom: 20px;
+}
+.portfolio-content * {
+  text-align: left;
+}
+.portfolio-images-up,
+.portfolio-images-down {
+  display: flex;
+
+  gap: 30px;
+  margin-bottom: 20px;
+}
+.portfolio-img {
+  position: relative;
+  cursor: pointer;
+}
+.portfolio-img::before {
+  position: absolute;
+  content: "";
+  top: 0;
+
+  background-color: rgb(235, 17, 17);
+  width: 0%;
+  height: 100%;
+  opacity: 0;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.portfolio-img:hover::before {
+  opacity: 0.5;
+  top: 0;
+  width: 100%;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+}
+.portfolio-images-up,
+.portfolio-images-down::before {
+}
+.portfolio-img img {
+  width: 100%;
+}
+/* portfolio area end */
