--- a/css/style.css
+++ b/css/style.css
@@ -469,3 +469,134 @@ ul {
   width: 100%;
 }
 /* portfolio area end */
+/* newsletter-area start */
+.newsletter-area {
+  border-radius: 16px;
+  background: rgba(255, 0, 0, 0.05);
+  padding: 100px 140px;
+  margin-bottom: 100px;
+}
+.newsletter-area .newsletter-img,
+.newsletter-section h2,
+p {
+  text-align: center;
+}
+.newsletter-section h2 {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+.newsletter-section p {
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 160% */
+  margin-bottom: 30px;
+}
+.newsletter-section input {
+  display: block;
+  margin: 0 auto;
+  padding: 15px 10px;
+  border-radius: 16px;
+  border: 0;
+  width: 220px;
+  position: relative;
+}
+.newsletter-section button {
+  position: absolute;
+}
+.btn-3 {
+  background-color: #f00;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 15px 20px;
+  cursor: pointer;
+  border: 0;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  margin: 0 auto;
+  display: block;
+  margin-top: 40px;
+}
+.btn-3:hover {
+  background-color: white;
+  color: red;
+  border: 1px solid #f00;
+}
+/* newsletter-area end */
+
+/* footer area start */
+.footer-bg {
+  background: #070211;
+  padding: 100px 0;
+}
+.footer-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  border-bottom: 1px solid #fff;
+}
+.footer-details {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0 auto;
+  gap: 650px;
+  padding: 30px 0;
+}
+.footer-address,
+.footer-contact p {
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 40px; /* 166.667% */
+}
+.footer-contact i {
+  margin-right: 10px;
+}
+.footer-social-links {
+  text-align: center;
+  padding: 20px 0px;
+  border-bottom: 1px solid #fff;
+}
+.footer-social-links a {
+  text-align: center;
+  margin: 15px 25px;
+}
+.footer-details p {
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.footer-details .fl-right {
+  float: right;
+}
+
+/* footer area end */
