--- a/css/style.css
+++ b/css/style.css
@@ -36,16 +36,17 @@ ul {
     url("../images/banner-bg.png");
   border-radius: 16px;
   margin: 60px 0 100px 0;
-  background-repeat: no-repeat;
   -webkit-border-radius: 16px;
   -moz-border-radius: 16px;
   -ms-border-radius: 16px;
   -o-border-radius: 16px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .banner-part .banner-content {
   text-align: center;
-  padding: 130px 100px;
+  padding: 150px;
 }
 .banner-part .banner-content h4 {
   color: #fff;
@@ -60,7 +61,6 @@ ul {
   font-size: 72px;
   font-weight: 900;
   line-height: 95px;
-  padding: 0px 200px;
 }
 /* banner-part end  */
 /* discount part start  */
@@ -109,6 +109,7 @@ ul {
   -ms-border-radius: 16px;
   -o-border-radius: 16px;
   margin: 60px 0 100px 0;
+  background-position: center;
 }
 .midnight-title {
   max-width: 700px;
@@ -129,6 +130,7 @@ ul {
   font-weight: 400;
   line-height: 30px;
   margin-bottom: 15px;
+  text-align: left;
 }
 .btn-1 {
   color: #fff;
@@ -192,8 +194,8 @@ ul {
   line-height: 56px;
 }
 .btn-2 {
-  background-color: #f00;
-  color: #fff;
+  background-color: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
   text-align: center;
   font-size: 20px;
   font-style: normal;
@@ -202,20 +204,12 @@ ul {
   text-transform: uppercase;
   padding: 15px 20px;
   cursor: pointer;
-  border: 0;
+  border: 1 px soli red;
   border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  transition: 0.5s;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
-  margin: 0 auto;
+  transition: all 0.5s ease 0s;
+  margin: 40px auto 0px;
   display: block;
-  margin-top: 40px;
+  border: 1px solid red;
 }
 .btn-2:hover {
   background-color: white;
@@ -242,7 +236,7 @@ ul {
 }
 .offer-section-new h3 {
   color: #070211;
-  font-size: 48px;
+  font-size: 35px;
   font-style: normal;
   font-weight: 900;
   line-height: normal;
@@ -273,7 +267,7 @@ ul {
 .offer-section-year h3 {
   color: #f00;
   font-family: Inter;
-  font-size: 48px;
+  font-size: 35px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -285,8 +279,9 @@ ul {
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px; /* 160% */
+  line-height: 32px;
   margin-bottom: 25px;
+  text-align: left;
 }
 /* offer area end  */
 /* holiday area start */
@@ -501,7 +496,7 @@ p {
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px; /* 160% */
+  line-height: 32px;
   margin-bottom: 30px;
 }
 .newsletter-form {
@@ -533,26 +528,7 @@ p {
   top: -1px;
   right: -13%;
 }
-/* .newsletter-section .newsletter-form {
-  width: 500px;
-} */
-/* .newsletter-section .newsletter-form input {
-  margin: 0 auto;
-  padding: 15px 10px;
-  border-radius: 16px;
-  border: 0;
-  width: 100%;
-  position: relative;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-.newsletter-section .newsletter-form button.btn-3 {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 100%;
-} */
+
 .btn-3 {
   background-color: #f00;
   color: #fff;
@@ -576,12 +552,11 @@ p {
   -ms-transition: 0.5s;
   -o-transition: 0.5s;
   margin: 0 auto;
-  display: block;
 }
 .btn-3:hover {
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   color: red;
-  border: 1px solid #f00;
+  border: none;
 }
 /* newsletter-area end */
 
