--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 * {
   margin: 0;
 }
+
 h1,
 h2,
 h3,
@@ -13,24 +14,30 @@ h5,
 h6 {
   font-family: "Merriweather", serif;
 }
+
 p,
 button,
 span,
 a {
   font-family: "Inter", sans-serif;
 }
+
 a {
   text-decoration: none;
 }
+
 ul {
   list-style: none;
 }
+
 .container {
   width: 82.5%;
   max-width: 1320px;
   margin: 0 auto;
 }
+
 /* banner-part start  */
+
 .banner-part {
   background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
     url("../images/banner-bg.png");
@@ -48,6 +55,7 @@ ul {
   text-align: center;
   padding: 150px;
 }
+
 .banner-part .banner-content h4 {
   color: #fff;
   font-family: Merriweather;
@@ -55,6 +63,7 @@ ul {
   margin-bottom: 15px;
   font-weight: 400;
 }
+
 .banner-part .banner-content h1 {
   color: #fff;
   font-family: Merriweather;
@@ -62,11 +71,15 @@ ul {
   font-weight: 900;
   line-height: 95px;
 }
+
 /* banner-part end  */
+
 /* discount part start  */
+
 .discount-part * {
   text-align: center;
 }
+
 .discount-part p.off-text {
   color: #f00;
   font-size: 88px;
@@ -75,6 +88,7 @@ ul {
   line-height: normal;
   margin-bottom: 48px;
 }
+
 .discount-part p.holiday-text {
   color: #f00;
   font-size: 24px;
@@ -83,6 +97,7 @@ ul {
   line-height: normal;
   margin-bottom: 10px;
 }
+
 .discount-part p.catagory-text {
   color: #070211;
   font-size: 48px;
@@ -91,11 +106,15 @@ ul {
   line-height: normal;
   margin-bottom: 20px;
 }
+
 .discount-img {
   margin-bottom: 120px;
 }
+
 /* discount part end  */
+
 /* midnight-part start  */
+
 .midnight-part {
   background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
     url("../images/midnight-bg.png");
@@ -111,9 +130,11 @@ ul {
   margin: 60px 0 100px 0;
   background-position: center;
 }
+
 .midnight-title {
   max-width: 700px;
 }
+
 .midnight-part .party-heading {
   color: #fff;
   font-size: 64px;
@@ -123,6 +144,7 @@ ul {
   letter-spacing: 7.04px;
   margin-bottom: 15px;
 }
+
 .midnight-part .party-text {
   color: rgba(255, 255, 255, 0.8);
   font-size: 18px;
@@ -132,6 +154,7 @@ ul {
   margin-bottom: 15px;
   text-align: left;
 }
+/* Button style start */
 .btn-1 {
   color: #fff;
   text-align: center;
@@ -155,44 +178,11 @@ ul {
   -ms-transition: 0.5s;
   -o-transition: 0.5s;
 }
+
 .btn-1:hover {
   background-color: red;
 }
-/* midnight-part end  */
-/* schedule-area start */
-.schedule-area {
-  background: linear-gradient(
-    180deg,
-    rgba(255, 0, 0, 0.1) 0%,
-    rgba(255, 0, 0, 0) 100%
-  );
-  border-radius: 16px;
-  -webkit-border-radius: 16px;
-  -moz-border-radius: 16px;
-  -ms-border-radius: 16px;
-  -o-border-radius: 16px;
-  padding: 100px;
-  margin-bottom: 100px;
-}
-.schedule-area .schedule-datails * {
-  text-align: center;
-}
-.schedule-datails p span {
-  color: #f00;
-  text-align: center;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 56px;
-  margin-right: 5px;
-}
-.schedule-datails p {
-  color: #070211;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 56px;
-}
+
 .btn-2 {
   background-color: rgb(255, 0, 0);
   color: rgb(255, 255, 255);
@@ -211,12 +201,87 @@ ul {
   display: block;
   border: 1px solid red;
 }
+
 .btn-2:hover {
   background-color: white;
   color: red;
   border: 1px solid #f00;
 }
+
+.btn-3 {
+  background-color: #f00;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 18px 25px;
+  cursor: pointer;
+  border: 0;
+  border-radius: 5px;
+  -webkit-border-radius: 0px 50px 50px 0;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  margin: 0 auto;
+}
+
+.btn-3:hover {
+  background-color: rgb(0, 0, 0);
+  color: red;
+  border: none;
+}
+
+/* Button style start */
+/* midnight-part end  */
+
+/* schedule-area start */
+.schedule-area {
+  background: linear-gradient(
+    180deg,
+    rgba(255, 0, 0, 0.1) 0%,
+    rgba(255, 0, 0, 0) 100%
+  );
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  padding: 100px;
+  margin-bottom: 100px;
+}
+
+.schedule-area .schedule-datails * {
+  text-align: center;
+}
+
+.schedule-datails p span {
+  color: #f00;
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 56px;
+  margin-right: 5px;
+}
+
+.schedule-datails p {
+  color: #070211;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 56px;
+}
+
 /* schedule-area end */
+
 /* offer area start  */
 .offer-area {
   display: flex;
@@ -234,6 +299,7 @@ ul {
   line-height: normal;
   margin-bottom: 15px;
 }
+
 .offer-section-new h3 {
   color: #070211;
   font-size: 35px;
@@ -244,13 +310,14 @@ ul {
   margin-bottom: 15px;
   text-align: left;
 }
+
 .offer-section-new p {
   color: rgba(7, 2, 17, 0.6);
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px; /* 160% */
+  line-height: 32px;
   text-align: left;
 }
 
@@ -319,7 +386,7 @@ ul {
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  line-height: 32px; /* 160% */
+  line-height: 32px;
   margin-bottom: 15px;
 }
 .holiday-images {
@@ -330,10 +397,11 @@ ul {
 .holiday-images img {
   width: 100%;
 }
+
 .holiday-section-one {
-  background-image: url("../images/Rectangle\ 2.png");
+  background: linear-gradient(0deg, #ff0000 30%, rgba(7, 2, 17, 0) 30%);
   width: 100%;
-  height: 537px;
+  height: 620px;
   margin-top: 100px;
   border-radius: 16px;
   -webkit-border-radius: 16px;
@@ -343,12 +411,23 @@ ul {
   position: relative;
   background-repeat: no-repeat;
 }
+/* background: linear-gradient(
+    180deg,
+    rgba(255, 0, 0, -0.1) 0%,
+    rgba(255, 0, 0) 100%
+  ); */
+
+/* background: linear-gradient(
+    180deg,
+    rgba(255, 0, 0, 0.1) 0%,
+    rgba(255, 0, 0, 0) 100%
+  ); */
+
 .holiday-section-one::before {
   position: absolute;
   content: "";
   background-image: url("../images/box.png");
   background-repeat: no-repeat;
-  /* top: -121px; */
   left: 0;
   bottom: -100px;
   width: 61%;
@@ -361,10 +440,8 @@ ul {
   background-repeat: no-repeat;
   top: 50px;
   right: 285px;
-  /* bottom: 70px; */
   width: 300px;
   height: 300px;
-  /* left: 526px; */
 }
 /* .holiday-section-two {
   background-image: url("../images/Rectangle\ 2.png");
@@ -381,6 +458,7 @@ ul {
 } */
 .holiday-section-one img {
   float: right;
+  margin-top: 1px;
 }
 /* .holiday-images .holiday-left {
   position: absolute;
@@ -388,6 +466,7 @@ ul {
   bottom: 0;
 } */
 /* holiday area end */
+
 /* portfolio area start */
 .portfolio-area {
   margin: 150px 0 130px 0;
@@ -418,7 +497,7 @@ ul {
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 32px; /* 160% */
+  line-height: 32px;
   margin-bottom: 20px;
 }
 .portfolio-content * {
@@ -427,7 +506,6 @@ ul {
 .portfolio-images-up,
 .portfolio-images-down {
   display: flex;
-
   gap: 30px;
   margin-bottom: 20px;
 }
@@ -439,7 +517,6 @@ ul {
   position: absolute;
   content: "";
   top: 0;
-
   background-color: rgb(235, 17, 17);
   width: 0%;
   height: 100%;
@@ -460,9 +537,7 @@ ul {
   -ms-border-radius: 16px;
   -o-border-radius: 16px;
 }
-.portfolio-images-up,
-.portfolio-images-down::before {
-}
+
 .portfolio-img img {
   width: 100%;
 }
@@ -529,35 +604,6 @@ p {
   right: -13%;
 }
 
-.btn-3 {
-  background-color: #f00;
-  color: #fff;
-  text-align: center;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-transform: uppercase;
-  padding: 18px 25px;
-  cursor: pointer;
-  border: 0;
-  border-radius: 5px;
-  -webkit-border-radius: 0px 50px 50px 0;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  transition: 0.5s;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
-  margin: 0 auto;
-}
-.btn-3:hover {
-  background-color: rgb(0, 0, 0);
-  color: red;
-  border: none;
-}
 /* newsletter-area end */
 
 /* footer area start */
@@ -583,11 +629,10 @@ p {
 .footer-address,
 .footer-contact p {
   color: #fff;
-  font-family: Inter;
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
-  line-height: 40px; /* 166.667% */
+  line-height: 40px;
 }
 .footer-contact i {
   margin-right: 10px;
@@ -603,7 +648,6 @@ p {
 }
 .footer-details p {
   color: #fff;
-  font-family: Inter;
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
